force-app/main/default/objects/InsurancePolicySurcharge/fields/vlocity_ins_fsc__AdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__AdjustmentType__c</fullName>
    <description>Type of associated product tax and fee.</description>
    <label>Adjustment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>