force-app/main/default/objects/InsurancePolicySurcharge/fields/vlocity_ins_fsc__IsTaxAndFeeRefundable__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__IsTaxAndFeeRefundable__c</fullName>
    <description>Checkbox indicating if tax/fee is refundable.</description>
    <formula>vlocity_ins_fsc__PriceListEntryId__r.vlocity_ins__PriceListId__r.vlocity_ins__IsRefundable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refundable</label>
    <type>Checkbox</type>
</CustomField>