force-app/main/default/objects/InsurancePolicySurcharge/fields/vlocity_ins_fsc__PriceListEntryId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__PriceListEntryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product tax and fee used to calculate the amount.</description>
    <label>Tax/Fee Id</label>
    <referenceTo>vlocity_ins__PriceListEntry__c</referenceTo>
    <relationshipLabel>Insurance Policy Surcharges</relationshipLabel>
    <relationshipName>InsurancePolicySurcharges</relationshipName>
    <type>Lookup</type>
</CustomField>