force-app/main/default/objects/InsurancePolicySurcharge/fields/vlocity_ins_fsc__PriceListEntryName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__PriceListEntryName__c</fullName>
    <description>Name of product tax and fee used to calculate the amount.</description>
    <formula>vlocity_ins_fsc__PriceListEntryId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax/Fee Name</label>
    <type>Text</type>
</CustomField>